--- a/guide3.html
+++ b/guide3.html
@@ -23,51 +23,87 @@
       <p>Ten szkic pozwala sprawdzić, czy płyta Arduino poprawnie komunikuje się z komputerem przez port szeregowy:</p>
       <pre><code id="arduinoTest2">
 /*
-  Program czat – komunikacja przez Serial z innym ESP32
-
-  Funkcjonalność:
-  - Urządzenie odczytuje dane wprowadzone przez użytkownika na monitorze szeregowym (Serial).
-  - Wpisana wiadomość jest wysyłana przez Serial2 do drugiego ESP32.
-  - Jeśli na Serial2 pojawi się wiadomość od drugiego urządzenia, jest ona wyświetlana w Serial Monitor.
+  Program: Sterowanie diodą LED z automatycznym wyłączeniem po 5 sekundach.
   
+  Założenia:
+  1. Przycisk BOOT (GPIO0) – zmiana stanu diody LED.
+  2. Każdorazowe naciśnięcie przycisku: jeśli dioda jest wyłączona – włącz; jeśli włączona – wyłącz.
+  3. Po włączeniu dioda LED świeci przez 5 sekund, a następnie automatycznie gaśnie.
+
   Uwaga:
-  - Dostosuj numery pinów dla Serial2 (CHAT_RX_PIN i CHAT_TX_PIN) do swojej konfiguracji.
-  - Oba urządzenia powinny korzystać z tego samego ustawienia prędkości transmisji.
+  - Zmień wartość LED_PIN na taki, który odpowiada rzeczywistej diodzie na Twojej płytce ESP32-S3.
 */
 
 #include <Arduino.h>
 
-// Używamy drugiego portu szeregowego (Serial2)
-// Na ESP32 można zdefiniować własne piny dla Serial2 (przykładowo: RX = 16, TX = 17)
-#define CHAT_RX_PIN 16
-#define CHAT_TX_PIN 17
+#define LED_PIN    21   // Pin diody LED (dostosuj do swojej płytki)
+#define BUTTON_PIN 0    // Pin przycisku BOOT (GPIO0)
 
-HardwareSerial ChatSerial(2);
+// Flagi i zmienne czasowe
+bool ledState = false;              // Aktualny stan LED (true = włączona, false = wyłączona)
+bool lastButtonState = HIGH;        // Poprzedni stan przycisku (przy INPUT_PULLUP - nieaktywny = HIGH)
+unsigned long lastDebounceTime = 0; // Czas ostatniej zmiany stanu przycisku
+const unsigned long debounceDelay = 50; // Opóźnienie "debouncing" w ms
+
+unsigned long ledTurnOnTime = 0;    // Czas, w którym LED została włączona
+const unsigned long ledOnDuration = 5000; // 5 sekund (5000 ms)
 
 void setup() {
   Serial.begin(115200);
-  // Inicjalizacja Serial2 z wybranymi pinami i prędkością 115200
-  ChatSerial.begin(115200, SERIAL_8N1, CHAT_RX_PIN, CHAT_TX_PIN);
-  Serial.println("Program czat - Komunikacja przez Serial z innym ESP32");
-  Serial.println("Wpisz wiadomość i naciśnij ENTER, aby wysłać:");
+  Serial.println("Sterowanie diodą LED z auto-wylaczeniem po 5s");
+
+  pinMode(LED_PIN, OUTPUT);
+  digitalWrite(LED_PIN, LOW);
+
+  // Przycisk BOOT z wbudowanym rezystorem podciągającym
+  pinMode(BUTTON_PIN, INPUT_PULLUP);
 }
 
 void loop() {
-  // Jeśli pojawiły się dane z monitora szeregowego (USB), wysyłamy je przez ChatSerial
-  if (Serial.available()) {
-    String message = Serial.readStringUntil('\n');
-    ChatSerial.println(message);
-    Serial.print("Wysłano: ");
-    Serial.println(message);
+  // --- Obsługa przycisku z debouncingiem ---
+  int reading = digitalRead(BUTTON_PIN);
+  
+  // Jeśli stan odczytu się zmienił, zapamiętaj czas
+  if (reading != lastButtonState) {
+    lastDebounceTime = millis();
+  }
+  // Jeśli stan przycisku utrzymuje się dłużej niż debounceDelay, uznajemy to za stabilny
+  if ((millis() - lastDebounceTime) > debounceDelay) {
+    // Jeśli przycisk został faktycznie naciśnięty (przejście z HIGH na LOW)
+    if (lastButtonState == HIGH && reading == LOW) {
+      // Przełącz LED (toggle)
+      ledState = !ledState;
+      
+      if (ledState) {
+        // Jeśli LED jest włączana, zapamiętaj czas włączenia
+        ledTurnOnTime = millis();
+        Serial.println("LED: Wlaczona");
+      } else {
+        Serial.println("LED: Wylaczona");
+        digitalWrite(LED_PIN, LOW);
+      }
+    }
+  }
+  lastButtonState = reading;
+
+  // --- Automatyczne wyłączanie LED po 5 sekundach ---
+  if (ledState) {
+    // Sprawdź, czy upłynęło 5 sekund od włączenia
+    if (millis() - ledTurnOnTime >= ledOnDuration) {
+      // Wyłącz LED
+      ledState = false;
+      digitalWrite(LED_PIN, LOW);
+      Serial.println("LED: Wylaczona automatycznie (5s uplynelo)");
+    } else {
+      // Jeśli LED jest włączona i czas jeszcze nie minął
+      // (dioda pozostaje w stanie HIGH)
+      digitalWrite(LED_PIN, HIGH);
+    }
   }
 
-  // Jeśli pojawiły się dane na ChatSerial, odczytujemy je i wyświetlamy na Serial Monitor
-  if (ChatSerial.available()) {
-    String incoming = ChatSerial.readStringUntil('\n');
-    Serial.print("Odebrano: ");
-    Serial.println(incoming);
-  }
+  delay(10);
 }
+
 
       </code></pre>
       <button onclick="copyCode('arduinoTest2')">Kopiuj kod</button>
