--- a/guide8.html
+++ b/guide8.html
@@ -22,17 +22,61 @@
       <h2>Przykładowy kod</h2>
       <p>Kod poniżej inicjuje komunikację szeregową oraz odczytuje dane wysłane do Arduino:</p>
       <pre><code id="arduinoSerial7">
+#include <Adafruit_NeoPixel.h>
+
+#define PIN 21       
+#define NUMPIXELS 1  
+#define BUTTON_PIN 0  
+
+Adafruit_NeoPixel pixels(NUMPIXELS, PIN, NEO_GRB + NEO_KHZ800);
+
+int currentState = 0; 
+bool buttonPressed = false; 
+
 void setup() {
-  Serial.begin(9600);
-  Serial.println("Wprowadź dane:");
+  pixels.begin();
+  pixels.clear();
+  pixels.show();
+  pinMode(BUTTON_PIN, INPUT_PULLUP); 
 }
 
 void loop() {
-  if (Serial.available() > 0) {
-    char received = Serial.read();
-    Serial.print("Odebrano: ");
-    Serial.println(received);
+  if (digitalRead(BUTTON_PIN) == LOW) {  
+    if (!buttonPressed) { 
+      buttonPressed = true;
+      currentState = (currentState + 1) % 5;  
+      updateLED(); 
+    }
+  } else {
+    buttonPressed = false;
   }
+}
+
+void updateLED() {
+  switch (currentState) {
+    case 0:  
+      setRingColor(0, 0, 0);
+      break;
+    case 1:  
+      setRingColor(0, 255, 0);
+      break;
+    case 2: 
+      setRingColor(255, 0, 0);
+      break;
+    case 3: 
+      setRingColor(0, 0, 255);
+      break;
+    case 4: 
+      setRingColor(255, 255, 255);
+      break;
+  }
+}
+
+void setRingColor(int red, int green, int blue) {
+  for (int i = 0; i < NUMPIXELS; i++) {
+    pixels.setPixelColor(i, pixels.Color(red, green, blue));
+  }
+  pixels.show();
 }
       </code></pre>
       <button onclick="copyCode('arduinoSerial7')">Kopiuj kod</button>
